--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,5 +1,34 @@
 
 
+.links {
+  display: inline-block;
+  font-family: arial, serif;
+  text-decoration: none;
+  color: #474747;
+  font-size: 13px;
+}
+
+#gmail_link {
+  /*position*/
+  position:relative;
+  float: right;
+  bottom: 165px;
+  right: 50px;
+}
+
+#images_link {
+  /*position*/
+  position:relative;
+  float: right;
+  bottom: 165px;
+  right: 35px;
+}
+
+.links:hover {
+  text-decoration: underline;
+}
+
+
 #sign_in {
     display: inline-block;
     background-color: #4387fb;
@@ -14,7 +43,27 @@
     text-decoration: none;
   }
 
+  #icon{
+     background-image:url(../images/icon.png);
+     display:inline-block;
+     height:30px;
+     width:30px;
+     background-size: 528px 68px;
+     background-position: -132px -38px;
+     opacity: .55;
+     overflow:hidden;
+     text-indent:100%;
+     white-space:nowrap;
+     /*position below*/
+     float: right;
+     margin-top: 10px;
+     margin-right: 15px;
+  }
 
+
+#icon:hover {
+  opacity: .99
+}
 
 
 #logo {
