--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -82,12 +82,12 @@
 
 #search_button {
   position: relative;
-  padding-top: 4px;
-  padding-bottom: 4px;
-  padding-right: 10px;
-  padding-left: 10px;
-  right: 65%;
-  top: 80px;
+padding-top: 4px;
+padding-bottom: 4px;
+padding-right: 10px;
+padding-left: 10px;
+/* right: 65%; */
+/* top: 80px; */
 }
 
 #lucky_button {
@@ -96,9 +96,10 @@
   padding-bottom: 4px;
   padding-right: 10px;
   padding-left: 10px;
-  right: 65%;
-  top: 80px;
+  /* right: 65%; */
+  /* top: 80px; */
   margin-left: 7px;
+  margin-top: 40px;
 }
 
 /*footer below*/
