--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -12,16 +12,17 @@
   /*position*/
   position:relative;
   float: right;
-  bottom: 165px;
-  right: 50px;
+  margin-top: 15px;
+  margin-right: 30px;
+
 }
 
 #images_link {
   /*position*/
   position:relative;
   float: right;
-  bottom: 165px;
-  right: 35px;
+  margin-top: 15px;
+  right: 15px;
 }
 
 .links:hover {
@@ -66,17 +67,15 @@
 }
 
 
-#logo {
-  position: absolute;
-  left: 550px;
-  top: 190px;
+#main {
+  text-align: center;
+  padding-top: 200px;
 }
 
 #text_input {
     position: relative;
     width: 463px;
     height: 34px;
-    right: 100px;
     top: 20px;
 }
 
